kubernetes/postgresql/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: postgresql
spec:
  hostnames:
    - pgadmin.k8s.weinbender.io
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: pgadmin
          port: 80
